--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   "author": "Minko Gechev <mgechev>",
   "license": "MIT",
   "devDependencies": {
-    "@angular/compiler-cli": "^4.3.0",
-    "@angular/platform-server": "^4.3.0",
+    "@angular/compiler-cli": "4.3.0",
+    "@angular/platform-server": "4.3.0",
     "@compodoc/compodoc": "^1.0.0-beta.7",
     "@types/async": "^2.0.32",
     "@types/browser-sync": "^0.0.36",
@@ -140,25 +140,25 @@
     "yargs": "^8.0.1"
   },
   "dependencies": {
-    "@angular/animations": "^4.3.0",
-    "@angular/cdk": "^2.0.0-beta.10",
-    "@angular/common": "^4.3.0",
-    "@angular/compiler": "^4.3.0",
-    "@angular/core": "^4.3.0",
-    "@angular/forms": "^4.3.0",
-    "@angular/http": "^4.3.0",
-    "@angular/material": "^2.0.0-beta.10",
-    "@angular/platform-browser": "^4.3.0",
-    "@angular/platform-browser-dynamic": "^4.3.0",
-    "@angular/router": "^4.3.0",
-    "@angular/service-worker": "^1.0.0-beta.16",
-    "@ngrx/effects": "^4.0.5",
-    "@ngrx/store": "^4.0.3",
-    "@ngrx/store-devtools": "^4.0.0",
-    "core-js": "^2.4.1",
-    "immutable": "^3.8.1",
-    "intl": "^1.2.5",
-    "rxjs": "^5.4.2",
+    "@angular/animations": "4.3.0",
+    "@angular/cdk": "2.0.0-beta.10",
+    "@angular/common": "4.3.0",
+    "@angular/compiler": "4.3.0",
+    "@angular/core": "4.3.0",
+    "@angular/forms": "4.3.0",
+    "@angular/http": "4.3.0",
+    "@angular/material": "2.0.0-beta.10",
+    "@angular/platform-browser": "4.3.0",
+    "@angular/platform-browser-dynamic": "4.3.0",
+    "@angular/router": "4.3.0",
+    "@angular/service-worker": "1.0.0-beta.16",
+    "@ngrx/effects": "4.0.5",
+    "@ngrx/store": "4.0.3",
+    "@ngrx/store-devtools": "4.0.0",
+    "core-js": "2.4.1",
+    "immutable": "3.8.1",
+    "intl": "1.2.5",
+    "rxjs": "5.4.2",
     "systemjs": "0.20.14",
     "zone.js": "0.8.12"
   }
